# rootext

./: .gitignore  LICENSE  README.md  pyproject.toml
rootext/: __main__.py
